infra/k8s/overlays/production/server/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubedev-server-service
spec:
  type: NodePort
