infra/k8s/overlays/production/server/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubedev-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kubedev-api-global-ip
spec:
  defaultBackend:
    service:
      name: kubedev-server-service
      port:
        number: 3000
